--- a/css/index.css
+++ b/css/index.css
@@ -1,37 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i|Open+Sans:300,300i,600&amp;subset=latin-ext')
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
 
 h1 {
-  font-family: 'Josefin Sans', serif;
-  font-size: 20px;
-  margin: 0;
-}
-
-h2 {
-  font-family: 'Open Sans', serif;
-  font-size: 18px;
-  margin: 0;
-  font-weight: 400;
-}
-h2 a {
-  font-size: 18px;
-}
-
-a, p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  line-height:1.5;
+  font-size: 2em;
+  margin: 0.67em 0;
 }
 
 a {
-  color: #357023;
+  color: var(--link);
   text-decoration: none;
 }
 
 a:hover {
-  color: #222;
+  color: var(--text);
 }
 
 body {
+  font: 400 20px / 1.2 "Cormorant Garamond", serif;
+  color: var(--text);
+  background-color: var(--background);
   display: flex;
   align-items: center;
   height: 100vh;
@@ -59,12 +49,12 @@ body {
 
 .right {
   margin: auto;
-  width: 276px;
+  width: 480px;
 }
 
 ul {
   list-style: none;
-  text-align: center;
+  text-align: left;
   padding: 0px;
 }
 
@@ -77,7 +67,13 @@ ul li {
 ul a {
   background: transparent;
   text-decoration: none;
-  color: #443E40;
+  color: var(--text);
+}
+
+ul a:hover {
+  background: transparent;
+  text-decoration: none;
+  color: var(--text-light);
 }
 
 [class*="fa-"]:before {
