improve code color

--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,7 @@
   --background: #fcfcfc;
   --background-accent: #fdfff7;
   --background-code: #fcfcfc;
-  --code: #707489;
+  --code: #4070a0;
   --text: #2a2c2d;
   --text-light: #818181;
   --line: #f3f3f3;
