--- a/static/templates/post-list.html
+++ b/static/templates/post-list.html
@@ -3,6 +3,7 @@
       <div class="recent-post">
         <h3><a href="$url$">$title$</a></h3>
         <div class="date"><span>$date$</span></div>
+        <p class="tags">($tags$)</p>
         $teaser$
         <p class="read-more"><a href="$url$">Read more →</a></p>
       </div>
