fix keywords in post header

--- a/static/templates/post.html
+++ b/static/templates/post.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="$tags$">
+    <meta name="keywords" content="$rawTags$">
     <meta name="description" content="$description$" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="$description$">
