--- a/css/post.css
+++ b/css/post.css
@@ -1,6 +1,6 @@
 h1.post-title {
-  font-size: 2.5rem;
-  font-family: OpenSans, sans-serif;
+  padding-top: 2.5rem;
+  border-top: 1px solid #aaa;
   text-align: center;
 }
 
@@ -12,7 +12,7 @@ h1.post-title {
 
 @media (min-width: 320px) {
   h1.post-title {
-    font-size: 2.0rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -27,7 +27,6 @@ div.date {
 div.date span {
   background-color: white;
   padding: 0 10px;
-  font-family: OpenSans;
   font-weight: bold;
   color: #999;
 }
@@ -46,7 +45,8 @@ div.date span {
 
 div.tags {
   text-align: right;
-  color: #999;
+  color: #777;
+  padding-bottom: 1.4rem;
 }
 
 div.tags a:link, div.tags a:visited {
@@ -55,17 +55,16 @@ div.tags a:link, div.tags a:visited {
 }
 
 div.footer-separator {
-  color: #aaa;
+  color: #999;
   border-bottom: 1px solid #aaa;
 }
 
 div.footer {
-  font-family: OpenSans;
   font-size: 1.2em;
   font-weight: bold;
   text-align: right;
-  margin-top: 8px;
-  margin-bottom: 20px;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 div.footer a:link, div.footer a:visited {
