--- a/templates/post.html
+++ b/templates/post.html
@@ -20,12 +20,15 @@
       <nav>
         <a href="/" title="Home">
           <img id="home" src="/images/home.svg" alt="Home">
+          <span>Home</span>
         </a>
         <a href="../rss/posts.rss" title="RSS feed">
           <img class="icon-rss" src="/images/rss.svg" alt="RSS">
+          <span>RSS</span>
         </a>
         <a href="$gitHubUrl$" title="GitHub profile">
           <img class="icon" src="/images/github.svg" alt="GitHub">
+          <span>GitHub</span>
         </a>
       </nav>
     </header>
