--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,9 @@
 div.info {
-  font-family: OpenSans, serif;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 h1 {
   font-size: 3.5rem;
-}
-
-h1, h2, h3 {
-  font-family: OpenSans, serif;
 }
 
 h1 code {
@@ -16,12 +11,15 @@ h1 code {
 }
 
 h3 {
-  font-size: 1.8rem;
+  font-size: 2.4rem;
   text-align: center;
   margin: 0;
 }
 
-h3 a:link, h3 a:visited { color: #000 }
+h3 a:link, h3 a:visited {
+  color: #000;
+  text-decoration: none;
+}
 
 div.date {
   width: 100%;
@@ -34,7 +32,6 @@ div.date {
 div.date span {
   background-color: white;
   padding: 0 10px;
-  font-family: OpenSans;
   color: #999;
   font-weight: bold;
 }
@@ -48,7 +45,6 @@ p {
 }
 
 p.read-more {
-  font-family: OpenSans;
   font-weight: bold;
   text-align: right;
 }
@@ -59,7 +55,7 @@ p.read-more a:link, p.read-more a:visited {
 
 p.tags {
   text-align: right;
-  color: #999;
+  color: #777;
 }
 
 p.tags a:link, p.tags a:visited {
@@ -72,19 +68,7 @@ p.tags a:link, p.tags a:visited {
     font-size: 2.5rem;
   }
 
-  p.info {
-    font-size: 1rem;
-  }
-
-  div.date {
-    font-size: 0.9rem;
-  }
-
-  p.read-more {
-    font-size: 0.9rem;
-  }
-
   h3 {
-    font-size: 1.1rem;
+    font-size: 1.8rem;
   }
 }
