--- a/templates/post.html
+++ b/templates/post.html
@@ -14,23 +14,12 @@
     <title>$title$</title>
     <link rel="stylesheet" href="/css/bundle.css" />
     <link rel="stylesheet" href="/css/post.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
   <body>
     <header>
-      <nav>
-        <a href="/" title="Home">
-          <img id="home" src="/images/home.svg" alt="Home">
-          <span>Home</span>
-        </a>
-        <a href="../rss/posts.rss" title="RSS feed">
-          <img class="icon-rss" src="/images/rss.svg" alt="RSS">
-          <span>RSS</span>
-        </a>
-        <a href="$gitHubUrl$" title="GitHub profile">
-          <img class="icon" src="/images/github.svg" alt="GitHub">
-          <span>GitHub</span>
-        </a>
-      </nav>
+      $partial("templates/nav.html")$
     </header>
 
     <h1 class="post-title">$title$</h1>
@@ -44,9 +33,7 @@
 
     <div class="footer-separator"></div>
     <div class="footer">
-      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">
-        Source: $title$ <img class="icon" src="/images/github.svg" alt="GitHub"></i>
-      </a>
+      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Source: $title$ <i class="fa fa-gitlab fa-lg"></i></a>
     </div>
     <script src="../js/post.js"></script>
   </body>
