better link to sources

--- a/css/post.css
+++ b/css/post.css
@@ -69,7 +69,7 @@ div.footer {
 
 div.footer a:link, div.footer a:visited {
   text-decoration: none;
-  color: #aaa;
+  color: #999;
 }
 
 div.footer img.icon {
