--- a/templates/post.html
+++ b/templates/post.html
@@ -33,7 +33,7 @@
 
     <div class="footer-separator"></div>
     <div class="footer">
-      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Source: $title$ <i class="fa fa-gitlab fa-lg"></i></a>
+      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">$title$ <i class="fa fa-gitlab fa-lg"></i></a>
     </div>
     <script src="../js/post.js"></script>
   </body>
