[design] post footer

--- a/templates/post.html
+++ b/templates/post.html
@@ -33,7 +33,7 @@
 
     <div class="footer-separator"></div>
     <div class="footer">
-      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">$title$ <i class="fa fa-gitlab fa-lg"></i></a>
+      <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Sources <i class="fa fa-code fa-lg"></i></a>
     </div>
   </body>
 </html>
