--- a/templates/post.html
+++ b/templates/post.html
@@ -12,8 +12,7 @@
     <meta property="og:title" content="$title$">
     <meta property="og:description" content="$description$">
     <title>$title$</title>
-    <link rel="stylesheet" href="/css/bundle.css" />
-    <link rel="stylesheet" href="/css/post.css" />
+    <link rel="stylesheet" href="/css/post-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
