--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -3,7 +3,7 @@
       <div class="recent-post">
         <h3><a href="$url$">$title$</a></h3>
         <div class="date"><span>$date$</span></div>
-        <p class="tags">($tags$)</p>
+        <div class="tags"><span>($tags$)</span></div>
         $teaser$
         <p class="read-more"><a href="$url$">Read more →</a></p>
       </div>
