--- a/css/common/blockquote.css
+++ b/css/common/blockquote.css
@@ -3,3 +3,10 @@ blockquote {
   border-left: 0.25em solid #dfe2e5;
   padding: 0 1em;
 }
+
+@media (max-width: 720px) {
+  blockquote {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
