--- a/css/index/headers.css
+++ b/css/index/headers.css
@@ -6,6 +6,12 @@ h1 code {
   color: #000;
 }
 
+@media (max-width: 720px) {
+  h1 {
+    font-size: 2.8rem;
+  }
+}
+
 h3 {
   font-size: 2.4rem;
   text-align: center;
@@ -15,4 +21,10 @@ h3 {
 h3 a:link, h3 a:visited {
   color: #000;
   text-decoration: none;
+}
+
+@media (max-width: 720px) {
+  h3 {
+    font-size: 2.0rem;
+  }
 }
