--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><a class="fa fa-home" href="/" title="Home">&nbsp Home</a></li>
+    <li><a class="fa fa-suitcase" href="/projects.html" title="Projects">&nbsp Projects</a></li>
     <li><a class="fa fa-rss" href="/atom.xml" title="RSS">&nbsp RSS</a></li>
     <li><a class="fa fa-github" href="$gitHubUrl$" title="GitHub profile">&nbsp GitHub</a></li>
   </ul>
