--- a/templates/projects.html
+++ b/templates/projects.html
@@ -20,8 +20,31 @@
       $about$
     </div>
     <h1>Projects</h1>
-    <div id="projects">
-      $for(projects)$
+
+    <h2>Special projects</h2>
+    <div class="projects">
+      $for(projects-special)$
+        $partial("templates/project.html")$
+      $endfor$
+    </div>
+
+    <h2>Emacs-related projects</h2>
+    <div class="projects">
+      $for(projects-emacs)$
+        $partial("templates/project.html")$
+      $endfor$
+    </div>
+
+    <h2>Haskell-related projects</h2>
+    <div class="projects">
+      $for(projects-haskell)$
+        $partial("templates/project.html")$
+      $endfor$
+    </div>
+
+    <h2>Other projects</h2>
+    <div class="projects">
+      $for(projects-other)$
         $partial("templates/project.html")$
       $endfor$
     </div>
