show about section on tag page

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -18,6 +18,10 @@
   </head>
   <body>
     $partial("templates/nav.html")$
+    <h1>$siteTitle$</h1>
+    <div class="info">
+      $about$
+    </div>
     <h1>(tagged "$tag$")</h1>
     $partial("templates/post-list.html")$
   </body>
