add stargazers_count to projects

--- a/templates/project.html
+++ b/templates/project.html
@@ -1,6 +1,7 @@
 <div class="project">
   <div class="project-header">
     <h1><a class="fa fa-github" href="https://github.com/d12frosted/$title$" title="GitHub">&nbsp $title$</a></h1>
+    <p>$stargazers_count$ <i class="fa fa-star"></i></p>
     <p>Languages: $languages$</p>
   </div>
   <div class="project-body">
