use symbol instead of string for tags headers

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -22,7 +22,7 @@
     <div class="info">
       $about$
     </div>
-    <h1>(tagged "$tag$")</h1>
+    <h1>(tagged '$tag$)</h1>
     $partial("templates/post-list.html")$
   </body>
 </html>
