--- a/templates/post.html
+++ b/templates/post.html
@@ -14,7 +14,7 @@
     <title>$title$</title>
     <link rel="stylesheet" href="/css/post-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+    <script src='/library/mathjax/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
   <body>
     <header>
