add chartjs support
With this change it's possible to put the following string in the post (org
mode) file and it will be replaced with a chart:

\#+ATTR_HTML: :file fibonacci-naive.json :type line
\#+ATTR_HTML: :height 100 :yAxisType logarithmic :title Mean execution time per N (in seconds) - logarithmic
\#+begin_criterion
\#+end_criterion

You will see more examples in the upcoming posts

--- a/templates/post.html
+++ b/templates/post.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/post-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src='/library/mathjax/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+    <script src="/library/chart.js/dist/Chart.min.js"></script>
   </head>
   <body>
     <header>
