--- a/templates/projects.html
+++ b/templates/projects.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="/css/index-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src='/library/mathjax/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     $partial("templates/nav.html")$
