update mathjax to the latest version

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,16 @@
     <title>$siteTitle$</title>
     <link rel="stylesheet" href="/css/index-bundle.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src='/library/mathjax/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+    <script>
+      MathJax = {
+        svg: {
+          fontCache: 'global'
+        }
+      };
+    </script>
+    <script type="text/javascript" id="MathJax-script" async
+            src="/library/mathjax/es5/tex-svg.js">
+    </script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
