extract common header template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="$siteKeywords$">
-    <meta property="og:title" content="$siteTitle$">
-    <meta property="og:locale" content="es_US">
-    <meta property="og:url" content="$siteUrl$">
     <title>$siteTitle$</title>
     <link rel="stylesheet" href="/css/index-bundle.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script>
-      MathJax = {
-        svg: {
-          fontCache: 'global'
-        }
-      };
-    </script>
-    <script type="text/javascript" id="MathJax-script" async
-            src="/library/mathjax/es5/tex-svg.js">
-    </script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    $partial("templates/header.html")$
   </head>
   <body>
     $partial("templates/nav.html")$
