--- a/templates/post.html
+++ b/templates/post.html
@@ -1,34 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="$rawTags$">
+    <title>$title$</title>
+    <link rel="stylesheet" href="/css/post-bundle.css" />
+    $partial("templates/header.html")$
     <meta name="description" content="$description$" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:description" content="$description$">
-    <meta property="og:locale" content="es_US">
-    <meta property="og:title" content="$title$">
     <meta property="og:description" content="$description$">
-    <title>$title$</title>
-    <link rel="stylesheet" href="/css/post-bundle.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script>
-      MathJax = {
-        svg: {
-          fontCache: 'global'
-        }
-      };
-    </script>
-    <script type="text/javascript" id="MathJax-script" async
-            src="/library/mathjax/es5/tex-svg.js">
-    </script>
-    <script src="/library/chart.js/dist/Chart.min.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <header>
