(ui) improve contrast of code blocks

--- a/css/common/syntax.css
+++ b/css/common/syntax.css
@@ -1,12 +1,12 @@
 :root {
-  --bg: #fcfcfc;
+  --bg: #f6f6f6;
   --kw: #007020;
   --dt: #902000;
   --dv: #40a070;
   --bn: #40a070;
   --fl: #40a070;
   --ch: #4070a0;
-  --st: #4070a0;
+  --st: #202020;
   --co: #60a0b0;
   --ot: #007020;
   --al: red;
