--- a/templates/header.html
+++ b/templates/header.html
@@ -23,3 +23,5 @@
         src="/library/mathjax/es5/tex-svg.js">
 </script>
 <script src="/library/chart.js/dist/Chart.min.js"></script>
+<script data-goatcounter="https://d12frosted.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
