add comments section

--- a/templates/post.html
+++ b/templates/post.html
@@ -27,5 +27,15 @@
     <div class="footer">
       <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Sources <i class="fa fa-code fa-lg"></i></a>
     </div>
+    <script src="https://utteranc.es/client.js"
+        repo="d12frosted/d12frosted.io"
+        issue-term="pathname"
+        label="comments"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+    </script>
+
+    $partial("templates/footer.html")$
   </body>
 </html>
