--- a/css/common/footer.css
+++ b/css/common/footer.css
@@ -1,3 +1,16 @@
 footer {
-  text-align: right;
+  text-align: center;
+  display: block;
+  font-size: 1.2rem;
+}
+
+footer a {
+  color: #000;
+  border-bottom: 1px solid #f3f3f3;
+  padding-bottom: 0.5rem;
+  text-decoration: none;
+}
+
+footer a:hover {
+  border-bottom: 1px solid #999;
 }
