add support information

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -13,6 +13,10 @@
     </div>
     <h1>Projects</h1>
 
+    <div class="info">
+      $support$
+    </div>
+
     <h2>Special projects</h2>
     <div class="projects">
       $for(projects-special)$
